tour section done

--- a/index.html
+++ b/index.html
@@ -46,11 +46,27 @@
                 </div>
             </section>
             <!-- banner section finish -->
-           
+        
         </nav>
     </header>
     <main>
-
+        <section class="tour_section">
+         <div class="tour_container">
+            <div class="tour_title">Our Popular Tours</div>
+            <div class="tour_description">Make your business shine online with a custom travel website designed just for you by a professional designer. Need ideas? We’ve collected some amazing examples of travel websites from our global community of designers. Get inspired and start planning the perfect travel web design today.</div>
+            <div class="tour_description1">
+                <ul>
+                    <li>The action or activity of going from one place to another, typically over a distance of some length.
+                  </li>
+                    <li>One thing I've learned from travelling is that you have to respect other countries</li>
+                    <li>If you're going from one place to another, you're travelling. People love to go travelling to see new places and experience different cultures</li>
+                </ul>
+            </div >
+            <div class="tour_description2">Many people travel for different purposes. Whether it is for a business trip or a holiday trip, we see people travelling often. Some people prefer a hilly area for travelling while the others like travelling to places with beaches. In this travelling essay, we will look at the importance of travelling and how it has changed ever since the old times</div>
+            <button class="tour_btn">Read more</button>
+         </div>
+         <div class="tour_img"><img src="Images/Rectangle 4.png" alt=""></div>
+        </section>
     </main>
     <footer>
 
