benefit section added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,51 @@
             <div class="tour_description2">Many people travel for different purposes. Whether it is for a business trip or a holiday trip, we see people travelling often. Some people prefer a hilly area for travelling while the others like travelling to places with beaches. In this travelling essay, we will look at the importance of travelling and how it has changed ever since the old times</div>
             <button class="tour_btn">Read more</button>
          </div>
-         <div class="tour_img"><img src="Images/Rectangle 4.png" alt=""></div>
+         <div ><img class="tour_img" src="Images/Rectangle 4.png" alt=""></div>
+        </section>
+        <!-- tour section finish -->
+
+        <section class="destination_sections">
+            <div class="destination_containers">
+                <div id="primary_titles">Choose Your Destination</div>
+                <div id="primary_descriptions">While the reasons for travelling are many, we must not forget that it can be a refreshing experience. Travelling is an experience that can teach us so many things that you cannot possibly learn while living at home.</div>
+                <div class="destination_img">
+                    <div class="rows">
+                    <div id="maldiv1"> <span id="maldiv1p">Maldivs</span> <img src="Images/Rectangle 5.png" alt=""></div> 
+                    <div id="maldiv"> <span id="maldivp">Indonesia</span> <img src="Images/Rectangle 8.png" alt=""></div>
+                    </div >
+                    <div class="rows">
+                    <div id="maldiv2"> <span id="maldiv2p">Srilanka</span><img src="Images/Rectangle 6.png" alt=""></div>
+                    <div  id="maldiv3"> <span id="maldiv3p">North America</span><img  src="Images/Rectangle 7.png" alt=""></div>
+                    <div  id="maldiv4"><span id="maldiv4p">kashmir</span><img src="Images/Rectangle 9.png" alt=""></div>
+                    </div>
+                    <div class="rows">
+                    <div id="maldiv5"><span id="maldiv5p">Bangladesh</span><img src="Images/Rectangle 11.png" alt=""></div>
+                    <div id="maldiv6"><span id="maldiv6p">Bandarban</span> <img src="Images/Rectangle 10.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="choose_section">
+            <div id="primary_titles">Why Choose Us</div>
+            <div  id="primary_descriptions">There is not much more to pack than what you usually bring in your luggage! Think about sun cream and mosquito repellent for the summer, these are things that we tend to leave at home and we end up having to buy mini-sprays at 15€.</div>
+            <div class="benifit_container">
+                <div class="benifit">
+                    <img src="Images/hotel-4.jpg" alt="" style="top: 50px; position: relative;">
+                    <p class="benifit_title">Handpicked Hotels</p>
+                    <p class="benifit_description">Located in Jakarta, 1 km from Museum Bank Indonesia, Holiday Inn & Suites Jakarta Gajah Mada, an IHG Hotel provides accommodation with a fitness centre, free private parking, a garden and a shared...</p>
+                </div>
+                <div class="benifit1">
+                    <img src="Images/world.jpg" alt="" style="top: 50px; position: relative;">
+                    <p class="benifit_title">World Class Service</p>
+                    <p class="benifit_description">Located in Jakarta, 1 km from Museum Bank Indonesia, Holiday Inn & Suites Jakarta Gajah Mada, an IHG Hotel provides accommodation with a fitness centre, free private parking, a garden and a shared...</p>
+                </div>
+                <div class="benifit" id="benifit2">
+                    <img src="Images/price.jpg" alt="" style="top: 50px; position: relative;">
+                    <p class="benifit_title">Best Price Guarantee</p>
+                    <p class="benifit_description">Located in Jakarta, 1 km from Museum Bank Indonesia, Holiday Inn & Suites Jakarta Gajah Mada, an IHG Hotel provides accommodation with a fitness centre, free private parking, a garden and a shared...</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
