benefit section added

--- a/index.html
+++ b/index.html
@@ -111,6 +111,28 @@
                 </div>
             </div>
         </section>
+        <!-- benifit section finish -->
+
+        <!-- perfect section start -->
+        <section>
+            <div class="perfect_section">
+                <div class="perfect_container">
+                    <div class="perfect_title">A Simple Perfect Place To Get Lost</div>
+                    <div class="perfect_description">Oahu may be the busiest and most populated Hawaiian island, but that doesn’t mean there aren’t some great Oahu hikes and nature trails to get away from the bustle and see some spectacular mountains, beaches, and waterfalls.</div>
+                    <div class="perfect_description1">
+                    <ul>
+                        <li>Without further ado, this is my guide to the top Oahu hikes and hiking trails! In my opinion, these are some of the very best hikes in Oahu Hawaii.</li>
+                        <li>Without further ado, this is my guide to the top Oahu hikes and hiking trails! In my opinion, these are some of the very best hikes in Oahu Hawaii.</li>
+                    </ul>
+                    <button class="tour_btn">See more</button>
+                    </div>
+                </div>
+                <div class="perfect_vdo">
+                    <video controls loop src="Images/0116.mp4"></video>
+                </div>
+               
+            </div>
+        </section>
     </main>
     <footer>
 
