newsletter section done

--- a/index.html
+++ b/index.html
@@ -133,7 +133,26 @@
                
             </div>
         </section>
-        <!-- benefit section  -->
+        <!-- perfect section finish -->
+
+        <!-- news section start -->
+        <section class="news_section">
+            <div class="news_container">
+                <div class="news_title">Newsletter</div>
+                <div class="news_des">The resort also offers bike hire.Hit the subscribe button
+
+                </div><hr>
+                <div class="news_btn">
+                    <input class="news_btn1" type="text" placeholder="Enter your name">
+                    <input class="news_btn1" type="email" placeholder="Enter your email">
+                    <input class="news_btn2" type="submit" value="Subscribe">
+                </div>
+
+
+            </div >
+            <div class="news_img"><img src="Images/Rectangle 8 (1).png" alt=""> <button class="news_button"><span class="button_1">Travel.com</span> <br> <span class="button_2">Save up to 70%</span></button></div>
+
+        </section>
     </main>
     <footer>
 
