footer section done

--- a/index.html
+++ b/index.html
@@ -155,7 +155,19 @@
         </section>
     </main>
     <footer>
+        <section class="footer_section">
+            <div class="footer_title"><img src="Images/Group 40071 (2).png" alt=""><div class="footer_name1">Journey <span class="footer_name12">Tales</span></div></div>
+            <div class="footer_des">Hyatt Centric Waikiki Beach is ideally located in central Waikiki. It offers a lounge with a wading pool, large jacuzzi, and outdoor fire pits.</div>
+            <div class="social_icons">
+                <img src="Images/Facebook.png" alt="">
+                <img src="Images/Instagram.png" alt="">
+                <img src="Images/Linkedin.png" alt="">
+                <img src="Images/Twitter.png" alt="">
+            </div><hr>
+            <div class="copyr8">2017, All Rights Reserved.</div>
+            
 
+        </section>
     </footer>
 </body>
 </html>
