blog section added

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                  <button class="deals_button">Book Now</button>
                          </div></div>
                     <div class="deals_img3"><img src="Images/Group 39.png" alt="">
-                        <div class="deal_description">
+                        <div class="deal_description2">
                             <div class="deals_icon">
                              <div><span class="material-symbols-outlined" style="color: #FF5400;">
                                  pace
@@ -222,6 +222,28 @@
             </div >
             <div class="news_img"><img src="Images/Rectangle 8 (1).png" alt=""> <button class="news_button"><span class="button_1">Travel.com</span> <br> <span class="button_2">Save up to 70%</span></button></div>
 
+        </section>
+        <!-- news section finish -->
+        <!-- blog_section start -->
+        <section class="blog_section">
+            <div id="primary_titles">Travel Blog</div>
+            <div id="primary_descriptions">When it comes to our advice we're proud to say we're different. We offer something a little more special. </div>
+            <div >
+                <div><img src="Images/image (1).jpg" alt="">
+               <div class="blog1">
+                <div class="blog1_title">My tour in Kashmir</div>
+                <div class="blog1_des">The population of historic Kashmir is divided into about 10 million people in Indian-administrated Jammu and Kashmir and 4.5 million in Pakistani-administered Kashmir. There are a further 1.8 million people in the Gilgit-Baltistan autonomous territory, which Pakistan created from northern Kashmir and the two small princely states of Hunza and Nagar in 1970.</div>
+               </div>
+               <div class="blog2">
+                <div class="blog2_title">A marvelous journey in Maldiv</div>
+                <div class="blog2_des">The Maldives, a jewel-like archipelago renowned worldwide for our beautiful landscapes and equally stunning seascapes, offers an array of thrilling water sports. From bodyboarding to windsurfing, each activity caters to different interests and energy levels. Selecting the ideal activity amidst our breathtaking aquatic playground can seem daunting. </div>
+               </div>
+               <div class="blog3">
+                <div class="blog3_title">An unforgotable tour in Srilanka</div>
+                <div class="blog3_des">Sri Lanka is an island country located off the southern coast of India. Sri Lanka is surrounded by the Indian Ocean, Gulf of Mannar, the Palk Strait, and lies in the vicinity of India and the Maldives. The geography of Sri Lanka includes coastal plains in the north and hills and mountains in the interior. The government system is a republic; the chief of state and head of government is the president. Sri Lanka has transitioned to a market-orientated economy. </div>
+               </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
